# make-dirs

./: AUTHORS  COPYING  Makefile  Makefile.am  README  README.md  README.md~  config.status  configure  configure.ac  filemanip.py  index.html  newfile  params.json
autom4te.cache/: output.0  output.1  traces.1
make-dirs/: Makefile  config.status
make-dirs/sequcl0/: Makefile.in  config.status  configure  configure.ac
make-dirs/sequcl0/autom4te.cache/: output.0
make-dirs/sequcl0/src/: Makefile.in
make-dirs/sequcl0/src/sequ/: Makefile.am  Makefile.in
make-dirs/src/: Makefile  make-dirs.in~
make-dirs/src/make/: Makefile
plotting-0.1/: configure.ac
sequcl0/: Makefile
sequcl0/autom4te.cache/: traces.1
sequcl0/src/: Makefile  Makefile.am
sequcl0/src/sequ/: Makefile
src/: Makefile  Makefile.am  Makefile.in  make-dirs.in  make-dirs.in~  plotting
src/make/: Makefile  Makefile.am  Makefile.in  make.py  make.py~
src/plot/: Makefile  Makefile.am  Makefile.in
